--- a/gymHouse/templates/index_admin_ailin.html
+++ b/gymHouse/templates/index_admin_ailin.html
@@ -214,97 +214,41 @@
                 </div>
             </div>
 
-            <div class="planmensual--pop-up" id="planmensual--pop-up">
-                <div class="planmensual--pop-up_wrap"> 
-                    <form class="pop-up--first" id="pop-up--first">
-                        <i class="fa-solid fa-xmark" id="close_modal_plan"></i>
-                        <p>Elegí el alumno al que vas a cambiar el plan</p>
-    
-                        <div class="container">
-                            <div class="select-box">
-                                <div class="options-container">
-                                    <div class="option">
-                                        <input type="radio" class="radio" id="Soto Aron" name="category"/>
-                                        <label for="Soto Aron">Soto Aron</label>
-                                    </div>
-                            
-                                    <div class="option">
-                                        <input type="radio" class="radio" id="Rodriguez Lautaro" name="category" />
-                                        <label for="Rodriguez Lautaro">Rodriguez Lautaro</label>
-                                    </div>
-                            
-                                    <div class="option">
-                                        <input type="radio" class="radio" id="Meana Ailin" name="category" />
-                                        <label for="Meana Ailin">Meana Ailin</label>
-                                    </div>
-                            
-                                    <div class="option">
-                                        <input type="radio" class="radio" id="Pablito Montiales" name="category" />
-                                        <label for="Pablito Montiales">Pablito Montiales</label>
-                                    </div>
-                                </div>   
-                                
-                                <div class="selected">
-                                    ...
-                                </div>
-                                
-                            </div>
-                        </div>
-    
-                        <p>Seleccioná el plan correspondiente</p>
-                        <ul>
-                            <li class="pop-up--plan">
-                                <p>2 días/semana</p>
-                            </li>
-                            <li class="pop-up--plan">
-                                <p>3 días/semana</p>
-                            </li>
-                            <li class="pop-up--plan">
-                                <p>5 días/semana</p>
-                            </li>
-                        </ul>
-                        <button type="button" id="first_button"><p>Siguiente</p></button>
-                    </form>
-    
-                    <form class="pop-up--second" id="pop-up--second">
+
+            {% comment %} <div  class="planmensual--pop-up" id="planmensual--pop-up">
+                <div class="planmensual--pop-up_wrap" id="form_add_days">
+                    {% csrf_token %}
+        
+                    <div class="pop-up--second" id="pop-up--second">
                         <i class="fa-solid fa-xmark"></i>
                         <p>Elegí los días y horarios que el alumno va a asistir</p>
                         <ul>
-                            <li class="day selection">
-                                <p>LUN</p>
-                                <div class="custom-num">
-                                    <i class="fas fa-angle-up arr-up" id="arr-down"></i>
-                                    <input
-                                    type="number"
-                                    class="num-input"
-                                    id="num-imput"
-                                    min="14"
-                                    max="22"
-                                    value="15"/>
-                                    <i class="fas fa-angle-down arr-down" id="arr-up"> </i>
-                                </div>
-                                <p class="hs">hs</p>
-                            </li>
-                            <li class="day">
-                                <p>MAR</p>
-                            </li>
-                            <li class="day">
-                                <p>MIÉ</p>
-                            </li>
-                            <li class="day">
-                                <p>JUE</p>
-                            </li>
-                            <li class="day">
-                                <p>VIE</p>
-                            </li>
+                            {{formsetDays.management_form}}
+                            {% comment %} {{formsetDays}}  
+                            {% for f in formsetDays %}
+                                <li class="day">
+                                    <p></p>
+                                    {{f.dia}}
+                                    
+                                    <div class="custom-num">
+                                        {{f.hora}}
+                                        <p class="hs">hs</p>
+                                    </div>
+                                </li>
+                                
+                            {% endfor %}
+        
                         </ul>
-                        <button type="button" id="second_button"><p>Finalizar</p></button>
-                        <button type="button" id="second_secondbutton"><p>Atrás</p></button>
-                    </form>
-    
+        
+
+                        <div class="container_buttons">
+                            <button type="button" id="second_button"><p>Finalizar</p></button>
+                            <a type="button" href="{% url 'personas:createUserTurno' %}" id="second_secondbutton"><p>Atrás</p></a>
+                        </div>
+                    </div>
+        
                     <div class="pop-up--third" id="pop-up--third">
-                        <a href=""><i class="fa-solid fa-xmark" id="xmark"></i></a>
-                        
+                        <button type="submit" id="form_close"><i class="fa-solid fa-xmark" id="xmark"></i></button>
                         <h5>¡Plan cambiado exitosamente!</h5>
                         <div class="plan-changed">
                             <p>Aron Soto</p>
@@ -325,6 +269,137 @@
                             </ul>
                         </div>
                     </div>
+                </div>    
+            
+                <div class="pop-up--third" id="pop-up--third">
+                    <a href=""><i class="fa-solid fa-xmark" id="xmark"></i></a>
+                    
+                    <h5>¡Plan cambiado exitosamente!</h5>
+                    <div class="plan-changed">
+                        <p>Aron Soto</p>
+                        <p>3 días/semana</p>
+                        <ul>
+                            <li>
+                                <p>Lun</p>
+                                <p>16hs</p>
+                            </li>
+                            <li>
+                                <p>Mié</p>
+                                <p>16hs</p>
+                            </li>
+                            <li>
+                                <p>Jue</p>
+                                <p>16hs</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div> {% endcomment %}
+
+
+            <div class="planmensual--pop-up" id="planmensual--pop-up">
+                <div class="planmensual--pop-up_wrap"> 
+                    <form action="" method="POST" class="update_turno">
+                        {% csrf_token %}
+                        <div class="pop-up--first" id="pop-up--first">
+                            <i class="fa-solid fa-xmark" id="close_modal_plan"></i>
+                            <p>Elegí el alumno al que vas a cambiar el plan</p>
+        
+                            <select name="" id="">
+                                <option value=""></option>
+                                <option value=""></option>
+                                <option value=""></option>
+                                <option value=""></option>
+                            </select>
+        
+                            <p>Seleccioná el plan correspondiente</p>
+                            <ul>
+                                <input type="radio" name="plan" id="dos_dias">
+                                <label class="pop-up--plan" for="dos_dias">
+                                    <p>2 días/semana</p>
+                                </label>
+                                
+                                <input type="radio" name="plan" id="tres_dias">
+                                <label class="pop-up--plan" for="tres_dias">
+                                    <p>3 días/semana</p>
+                                </label>
+
+                                <input type="radio" name="plan" id="cinco_dias">
+                                <label class="pop-up--plan" for="cinco_dias">
+                                    <p>5 días/semana</p>
+                                </label>
+                            </ul>
+                            <button type="button" id="first_button"><p>Siguiente</p></button>
+                        </div>
+                        <div class="pop-up--second" id="pop-up--second">
+                            <i class="fa-solid fa-xmark"></i>
+                            <p>Elegí los días y horarios que el alumno va a asistir</p>
+                            <ul>
+                                {{formsetDays.management_form}}
+                                {% comment %} {{formsetDays}}  {% endcomment %}
+                                {% for f in formsetDays %}
+                                    <li class="day">
+                                        <p></p>
+                                        {{f.dia}}
+                                        
+                                        <div class="custom-num">
+                                            {{f.hora}}
+                                            <p class="hs">hs</p>
+                                        </div>
+                                    </li>
+                                    
+                                {% endfor %}
+            
+                            </ul>
+            
+    
+                            <div class="container_buttons">
+                                <button type="button" id="second_button"><p>Finalizar</p></button>
+                                <button type="button" id="second_secondbutton"><p>Atrás</p></button>
+                            </div>
+                        </div>
+                        <div class="pop-up--third" id="pop-up--third">
+                            <h5>¡Plan cambiado exitosamente!</h5>
+                            <button type="submit" id="form_close">Salir</i></button>
+                            
+                        </div>
+                        {% comment %} <form class="pop-up--second" id="pop-up--second">
+                            <i class="fa-solid fa-xmark"></i>
+                            <p>Elegí los días y horarios que el alumno va a asistir</p>
+                            <ul>
+                                <li class="day selection">
+                                    <p>LUN</p>
+                                    <div class="custom-num">
+                                        <i class="fas fa-angle-up arr-up" id="arr-down"></i>
+                                        <input
+                                        type="number"
+                                        class="num-input"
+                                        id="num-imput"
+                                        min="14"
+                                        max="22"
+                                        value="15"/>
+                                        <i class="fas fa-angle-down arr-down" id="arr-up"> </i>
+                                    </div>
+                                    <p class="hs">hs</p>
+                                </li>
+                                <li class="day">
+                                    <p>MAR</p>
+                                </li>
+                                <li class="day">
+                                    <p>MIÉ</p>
+                                </li>
+                                <li class="day">
+                                    <p>JUE</p>
+                                </li>
+                                <li class="day">
+                                    <p>VIE</p>
+                                </li>
+                            </ul>
+                            <button type="button" id="second_button"><p>Finalizar</p></button>
+                            <button type="button" id="second_secondbutton"><p>Atrás</p></button>
+                        </form> {% endcomment %}
+                        
+                    </form>
                 </div>    
             </div>
             <div class="fill-mediaquery"></div>
