--- a/gymHouse/personas/templates/admin_select_plan_alumnos.html
+++ b/gymHouse/personas/templates/admin_select_plan_alumnos.html
@@ -158,7 +158,7 @@
         
     </div>
 
-    <div class="planmensual--pop-up" id="planmensual--pop-up">
+    <div class="planmensual--pop-up_turnos" id="planmensual--pop-up">
         <form method="POST" class="planmensual--pop-up_wrap" id="form_create_user">
             {% csrf_token %}
 
